tests/bad/external-return-string.pas
program external_return_string;

function bad_return: string; external;

begin
end.
